syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.widedelivery.order.proto";

package com.widedelivery.order.proto;

import "com.widedelivery.order/order.proto";
import "com.widedelivery.driver/driver.proto";

message LinkDriverWithOrderInput {
  string driver_id = 1;
  string order_id = 2;
}

